# libctr11

./: .gitignore  Makefile.am  common.mk  configure.ac  libctr11.pc.in  meson.build
include/ctr11/: ctr_cache.h  ctr_console.h  ctr_freetype.h  ctr_gpu.h  ctr_lcd.h  ctr_mmu.h  ctr_pxi.h  ctr_screen.h  ctr_surface.h  ctr_system.h  ctr_window.h
src/: Makefile.am  crt0.s  ctr11_gpu.c  ctr_cache.s  ctr_circular_buffer.c  ctr_console.c  ctr_firm.c  ctr_freetype.c  ctr_headers.c  ctr_hid.c  ctr_init.c  ctr_lcd.c  ctr_mmu.c  ctr_mmu_.s  ctr_pxi.c  ctr_screen.c  ctr_screen.cpp  ctr_surface.cpp  ctr_system.c  ctr_window.cpp  i2c.c  screen_init.c
